Add string resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">khor-jia-quan-quiz2</string>
+    <string name="quiz2">Quiz 2</string>
+    <string name="b1">A + B + C</string>
+    <string name="b2">A - B + C</string>
+    <string name="b3">A * B - C</string>
+
 </resources>
